--- a/RL.ipynb
+++ b/RL.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "import torch.nn.functional as F\n",
+    "from torch.utils.tensorboard import SummaryWriter\n",
     "\n",
     "import math\n",
     "import random\n",
@@ -30,6 +31,15 @@
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "source": [
+    "device = torch.device(\"cpu\")"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "# Gym Environment"
@@ -38,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "source": [
     "import caviar_tools\n",
     "from beamselect_env import BeamSelectionEnv"
@@ -55,13 +65,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "source": [
     "epi = [0,10] #[start,end]\n",
     "gym_env = BeamSelectionEnv(epi)\n",
     "n_steps = caviar_tools.linecount(epi)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "/home/sundesh/Documents/git/ITU-Challenge/torch_rl/lib/python3.6/site-packages/gym/logger.py:34: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
+      "  warnings.warn(colorize(\"%s: %s\" % (\"WARN\", msg % args), \"yellow\"))\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "source": [
+    "n_steps"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "68700"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
    "metadata": {}
   },
   {
@@ -75,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "source": [
     "gym_env.observation_space"
    ],
@@ -84,40 +123,410 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "Box([-500. -500. -500.    0.    0.    0.    0.], [5.e+02 5.e+02 5.e+02 1.e+03 1.e+03 2.e+04 1.e+09], (7,), float32)"
+       "Box([-500.  -500.  -500.    -1.    -1.    -1.5   -1.5    0.     0.     0.\n",
+       "    0. ], [5.0e+02 5.0e+02 5.0e+02 1.0e+00 1.0e+00 1.5e+00 1.5e+00 1.0e+03 1.0e+03\n",
+       " 2.0e+04 1.0e+09], (11,), float32)"
       ]
      },
      "metadata": {},
-     "execution_count": 26
+     "execution_count": 6
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "source": [
-    "state,reward,done,info=gym_env.step([1,4])"
+    "state,reward,done,info=gym_env.step([2,53])"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "source": [
     "state"
    ],
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'state' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-202074563d3b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mstate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'state' is not defined"
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array(['11.417197', '37.027515', '7.4369965', '-0.0', '0.0', '0.9999752',\n",
+       "       '0.0070461035', '0.0', '22.0', '0.0', '1456463.7764599628'],\n",
+       "      dtype='<U32')"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "source": [
+    "reward"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.0015139003578309937"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "source": [
+    "info"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'pkts_dropped': 0.0,\n",
+       " 'pkts_transmitted': 22.0,\n",
+       " 'timestamp': '1626810037874447104',\n",
+       " 'obj': 'simulation_pedestrian1',\n",
+       " 'pos_x': '11.417197',\n",
+       " 'pos_y': '37.027515',\n",
+       " 'pos_z': '7.4369965',\n",
+       " 'orien_x': '-0.0',\n",
+       " 'orien_y': '0.0',\n",
+       " 'orien_z': '0.9999752',\n",
+       " 'orien_w': '0.0070461035',\n",
+       " 'linear_acc_x': '',\n",
+       " 'linear_acc_y': '',\n",
+       " 'linear_acc_z': '',\n",
+       " 'linear_vel_x': '',\n",
+       " 'linear_vel_y': '',\n",
+       " 'linear_vel_z': '',\n",
+       " 'angular_acc_x': '',\n",
+       " 'angular_acc_y': '',\n",
+       " 'angular_acc_z': '',\n",
+       " 'angular_vel_x': '',\n",
+       " 'angular_vel_y': '',\n",
+       " 'angular_vel_z': '',\n",
+       " 'pkts_buffered': 0.0,\n",
+       " 'bit_rate': 1456463.7764599628,\n",
+       " 'chosen_ue': 'simulation_pedestrian1',\n",
+       " 'packets': 14532.0,\n",
+       " 'channel_mag': array(0.00480021)}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Replay Memory"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "source": [
+    "Transition = namedtuple('Transition',\n",
+    "                        ('state', 'action', 'next_state', 'reward'))\n",
+    "\n",
+    "\n",
+    "class ReplayMemory(object):\n",
+    "\n",
+    "    def __init__(self, capacity):\n",
+    "        self.memory = deque([],maxlen=capacity)\n",
+    "\n",
+    "    def push(self, *args):\n",
+    "        \"\"\"Save a transition\"\"\"\n",
+    "        self.memory.append(Transition(*args))\n",
+    "\n",
+    "    def sample(self, batch_size):\n",
+    "        return random.sample(self.memory, batch_size)\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.memory)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## DQN"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "source": [
+    "class DQN(nn.Module):\n",
+    "\n",
+    "    def __init__(self, inputs:int=7, outputs:int=64*3):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.linear = nn.Sequential(\n",
+    "            self.create_linear(inputs,16),\n",
+    "            self.create_linear(16, 32),\n",
+    "            self.create_linear(32,64),\n",
+    "            self.create_linear(64,outputs)\n",
+    "        )\n",
+    "    \n",
+    "    def create_linear(self,inp:int,out:int)-> nn.Module:\n",
+    "        return nn.Sequential(\n",
+    "            nn.Linear(inp,out),\n",
+    "            nn.ELU()\n",
+    "            # nn.BatchNorm1d(out)\n",
+    "        )\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        x = x.to(device)\n",
+    "        x = self.linear(x)\n",
+    "        return x\n",
+    "\n",
+    "        "
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "source": [
+    "tmp = DQN()\n",
+    "sample = torch.rand((1,7))\n",
+    "tmp(sample).shape"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 192])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Hyperparams"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "source": [
+    "BATCH_SIZE = 128\n",
+    "GAMMA = 0.999\n",
+    "EPS_START = 0.9\n",
+    "EPS_END = 0.05\n",
+    "EPS_DECAY = 200\n",
+    "TARGET_UPDATE = 10"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Action"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "source": [
+    "policy_net = DQN(11, 192).to(device)\n",
+    "target_net = DQN(11, 192).to(device)\n",
+    "target_net.load_state_dict(policy_net.state_dict())\n",
+    "target_net.eval()\n",
+    "\n",
+    "optimizer = optim.RMSprop(policy_net.parameters())\n",
+    "memory = ReplayMemory(10000)\n",
+    "\n",
+    "n_actions = 64*3\n",
+    "steps_done = 0\n",
+    "\n",
+    "def select_action(state):\n",
+    "    global steps_done\n",
+    "    sample = random.random()\n",
+    "    eps_threshold = EPS_END + (EPS_START - EPS_END) * \\\n",
+    "        math.exp(-1. * steps_done / EPS_DECAY)\n",
+    "    steps_done += 1\n",
+    "    if sample > eps_threshold:\n",
+    "        with torch.no_grad():\n",
+    "            # t.max(1) will return largest column value of each row.\n",
+    "            # second column on max result is index of where max element was\n",
+    "            # found, so we pick action with the larger expected reward.\n",
+    "            flattened_action = policy_net(state).max(dim = 1).indices\n",
+    "            return torch.tensor([[flattened_action]], device=device, dtype=torch.long)\n",
+    "    else:\n",
+    "        flattened_action = random.randrange(n_actions)\n",
+    "        return torch.tensor([[flattened_action]], device=device, dtype=torch.long)\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "source": [
+    "select_action(torch.tensor(state.astype(np.float32).reshape(1, state.shape[0])))"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "tensor([[87]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Optimize Model"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "source": [
+    "def optimize_model():\n",
+    "    if len(memory) < BATCH_SIZE:\n",
+    "        return\n",
+    "    transitions = memory.sample(BATCH_SIZE)\n",
+    "    # Transpose the batch (see https://stackoverflow.com/a/19343/3343043 for\n",
+    "    # detailed explanation). This converts batch-array of Transitions\n",
+    "    # to Transition of batch-arrays.\n",
+    "    batch = Transition(*zip(*transitions))\n",
+    "\n",
+    "    # Compute a mask of non-final states and concatenate the batch elements\n",
+    "    # (a final state would've been the one after which simulation ended)\n",
+    "    non_final_mask = torch.tensor(tuple(map(lambda s: s is not None,\n",
+    "                                          batch.next_state)), device=device, dtype=torch.bool)\n",
+    "    non_final_next_states = torch.cat([s for s in batch.next_state\n",
+    "                                                if s is not None])\n",
+    "    state_batch = torch.cat(batch.state)\n",
+    "    action_batch = torch.cat(batch.action)\n",
+    "    reward_batch = torch.cat(batch.reward)\n",
+    "\n",
+    "    # Compute Q(s_t, a) - the model computes Q(s_t), then we select the\n",
+    "    # columns of actions taken. These are the actions which would've been taken\n",
+    "    # for each batch state according to policy_net\n",
+    "    state_action_values = policy_net(state_batch).gather(1, action_batch)\n",
+    "\n",
+    "    # Compute V(s_{t+1}) for all next states.\n",
+    "    # Expected values of actions for non_final_next_states are computed based\n",
+    "    # on the \"older\" target_net; selecting their best reward with max(1)[0].\n",
+    "    # This is merged based on the mask, such that we'll have either the expected\n",
+    "    # state value or 0 in case the state was final.\n",
+    "    next_state_values = torch.zeros(BATCH_SIZE, device=device)\n",
+    "    next_state_values[non_final_mask] = target_net(non_final_next_states).max(1)[0].detach()\n",
+    "    # Compute the expected Q values\n",
+    "    expected_state_action_values = (next_state_values * GAMMA) + reward_batch\n",
+    "    # Compute Huber loss\n",
+    "    criterion = nn.SmoothL1Loss()\n",
+    "    loss = criterion(state_action_values, expected_state_action_values.unsqueeze(1))\n",
+    "\n",
+    "    # Optimize the model\n",
+    "    optimizer.zero_grad()\n",
+    "    loss.backward()\n",
+    "    for param in policy_net.parameters():\n",
+    "        param.grad.data.clamp_(-1, 1)\n",
+    "    optimizer.step()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Training loop"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "source": [
+    "# Tensorboard\n",
+    "log_dir = './log_tensorboard/11_obs_space' \n",
+    "writer = SummaryWriter(log_dir=log_dir)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "source": [
+    "# Initialize the environment and state\n",
+    "state = torch.zeros((1,11), dtype=torch.float32)\n",
+    "for i_episode in range(n_steps):\n",
+    "    # Select and perform an action\n",
+    "    action = select_action(state)\n",
+    "    # Observe new state\n",
+    "    next_state, reward, done, info = gym_env.step([action.item()//64, action.item()%64])\n",
+    "    next_state = next_state.astype(np.float32).reshape(1, next_state.shape[0])\n",
+    "    next_state = torch.tensor(next_state)\n",
+    "    reward = torch.tensor([reward], device=device).float()\n",
+    "\n",
+    "    writer.add_scalar('episode_reward',reward,i_episode)\n",
+    "\n",
+    "    # print(next_state)\n",
+    "    # print(state)\n",
+    "    # Store the transition in memory\n",
+    "    memory.push(state, action, next_state, reward)\n",
+    "\n",
+    "    # Move to the next state\n",
+    "    state = next_state\n",
+    "\n",
+    "    # Perform one step of the optimization (on the policy network)\n",
+    "    optimize_model()\n",
+    "    \n",
+    "    # Update the target network, copying all weights and biases in DQN\n",
+    "    if i_episode % TARGET_UPDATE == 0:\n",
+    "        target_net.load_state_dict(policy_net.state_dict())\n",
+    "\n",
+    "print('Complete')\n",
+    "gym_env.close()"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Complete\n"
      ]
     }
    ],
