Analyzed and inferenced various hyperparams Added more logging features to tensorboard

--- a/RL.ipynb
+++ b/RL.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "import torch.nn.functional as F\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
+    "\n",
+    "import tqdm\n",
     "\n",
     "import math\n",
     "import random\n",
@@ -32,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "source": [
     "device = torch.device(\"cpu\")"
    ],
@@ -48,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "source": [
     "import caviar_tools\n",
     "from beamselect_env import BeamSelectionEnv"
@@ -65,42 +67,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "source": [
     "epi = [0,10] #[start,end]\n",
     "gym_env = BeamSelectionEnv(epi)\n",
     "n_steps = caviar_tools.linecount(epi)"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "/home/sundesh/Documents/git/ITU-Challenge/torch_rl/lib/python3.6/site-packages/gym/logger.py:34: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
-      "  warnings.warn(colorize(\"%s: %s\" % (\"WARN\", msg % args), \"yellow\"))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "source": [
     "n_steps"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "68700"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 5
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -114,29 +96,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "source": [
     "gym_env.observation_space"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "Box([-500.  -500.  -500.    -1.    -1.    -1.5   -1.5    0.     0.     0.\n",
-       "    0. ], [5.0e+02 5.0e+02 5.0e+02 1.0e+00 1.0e+00 1.5e+00 1.5e+00 1.0e+03 1.0e+03\n",
-       " 2.0e+04 1.0e+09], (11,), float32)"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 6
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "source": [
     "state,reward,done,info=gym_env.step([2,53])"
    ],
@@ -145,91 +114,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "source": [
     "state"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "array(['11.417197', '37.027515', '7.4369965', '-0.0', '0.0', '0.9999752',\n",
-       "       '0.0070461035', '0.0', '22.0', '0.0', '1456463.7764599628'],\n",
-       "      dtype='<U32')"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 8
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "source": [
     "reward"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "0.0015139003578309937"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 9
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "source": [
     "info"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "{'pkts_dropped': 0.0,\n",
-       " 'pkts_transmitted': 22.0,\n",
-       " 'timestamp': '1626810037874447104',\n",
-       " 'obj': 'simulation_pedestrian1',\n",
-       " 'pos_x': '11.417197',\n",
-       " 'pos_y': '37.027515',\n",
-       " 'pos_z': '7.4369965',\n",
-       " 'orien_x': '-0.0',\n",
-       " 'orien_y': '0.0',\n",
-       " 'orien_z': '0.9999752',\n",
-       " 'orien_w': '0.0070461035',\n",
-       " 'linear_acc_x': '',\n",
-       " 'linear_acc_y': '',\n",
-       " 'linear_acc_z': '',\n",
-       " 'linear_vel_x': '',\n",
-       " 'linear_vel_y': '',\n",
-       " 'linear_vel_z': '',\n",
-       " 'angular_acc_x': '',\n",
-       " 'angular_acc_y': '',\n",
-       " 'angular_acc_z': '',\n",
-       " 'angular_vel_x': '',\n",
-       " 'angular_vel_y': '',\n",
-       " 'angular_vel_z': '',\n",
-       " 'pkts_buffered': 0.0,\n",
-       " 'bit_rate': 1456463.7764599628,\n",
-       " 'chosen_ue': 'simulation_pedestrian1',\n",
-       " 'packets': 14532.0,\n",
-       " 'channel_mag': array(0.00480021)}"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 10
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -241,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "source": [
     "Transition = namedtuple('Transition',\n",
     "                        ('state', 'action', 'next_state', 'reward'))\n",
@@ -274,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "source": [
     "class DQN(nn.Module):\n",
     "\n",
@@ -307,24 +214,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "source": [
     "tmp = DQN()\n",
     "sample = torch.rand((1,7))\n",
     "tmp(sample).shape"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "torch.Size([1, 192])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 13
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -336,10 +232,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "source": [
     "BATCH_SIZE = 128\n",
-    "GAMMA = 0.999\n",
+    "GAMMA = 0.99\n",
     "EPS_START = 0.9\n",
     "EPS_END = 0.05\n",
     "EPS_DECAY = 200\n",
@@ -357,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "source": [
     "policy_net = DQN(11, 192).to(device)\n",
     "target_net = DQN(11, 192).to(device)\n",
@@ -392,22 +288,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "source": [
     "select_action(torch.tensor(state.astype(np.float32).reshape(1, state.shape[0])))"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "tensor([[87]])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 16
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -419,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "source": [
     "def optimize_model():\n",
     "    if len(memory) < BATCH_SIZE:\n",
@@ -477,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "source": [
     "# Tensorboard\n",
     "log_dir = './log_tensorboard/11_obs_space' \n",
@@ -488,11 +373,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "source": [
     "# Initialize the environment and state\n",
     "state = torch.zeros((1,11), dtype=torch.float32)\n",
-    "for i_episode in range(n_steps):\n",
+    "ovr_reward = 0\n",
+    "for i_episode in tqdm.tqdm(range(n_steps)):\n",
     "    # Select and perform an action\n",
     "    action = select_action(state)\n",
     "    # Observe new state\n",
@@ -500,6 +386,8 @@
     "    next_state = next_state.astype(np.float32).reshape(1, next_state.shape[0])\n",
     "    next_state = torch.tensor(next_state)\n",
     "    reward = torch.tensor([reward], device=device).float()\n",
+    "\n",
+    "    ovr_reward+=reward.item()\n",
     "\n",
     "    writer.add_scalar('episode_reward',reward,i_episode)\n",
     "\n",
@@ -518,25 +406,34 @@
     "    if i_episode % TARGET_UPDATE == 0:\n",
     "        target_net.load_state_dict(policy_net.state_dict())\n",
     "\n",
-    "print('Complete')\n",
+    "    # if i_episode%100 == 0:\n",
+    "    #     print(f'{i_episode+1}/{n_steps} Iterations completed.')\n",
+    "    \n",
+    "writer.add_hparams(\n",
+    "    {'BATCH_SIZE' : BATCH_SIZE,\n",
+    "    'GAMMA' : GAMMA,\n",
+    "    'EPS_START' : EPS_START,\n",
+    "    'EPS_END' : EPS_END,\n",
+    "    'EPS_DECAY' : EPS_DECAY,\n",
+    "    'TARGET_UPDATE' :TARGET_UPDATE},\n",
+    "    {\n",
+    "        'Overall Reward':ovr_reward,\n",
+    "        'Average Reward': ovr_reward/n_steps\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "print(f'Overall reward = {ovr_reward:.2f}. ' \\\n",
+    "    f'Average Reward = {ovr_reward/n_steps:.4f}')\n",
     "gym_env.close()"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Complete\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.6.9 64-bit ('torch_rl': venv)"
+   "display_name": "Python 3.6.13 64-bit ('ITU': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -548,11 +445,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.13"
   },
   "orig_nbformat": 2,
   "interpreter": {
-   "hash": "f8337d322f02065436781250dc8881439cca8a58f1212dae4e4294dbbc4e4375"
+   "hash": "704f8173b5278a07e1dad217082faca02c99b0dff81b24cc095b855fb1648990"
   }
  },
  "nbformat": 4,
