added code for new reward function

--- a/RL.ipynb
+++ b/RL.ipynb
@@ -2,7 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "source": [
+    "# {'pkts_dropped': 0.0,\n",
+    "#  'pkts_transmitted': 75.0,\n",
+    "#  'timestamp': '1626810037874447104',\n",
+    "#  'obj': 'simulation_pedestrian1',\n",
+    "#  'pos_x': '11.417197',\n",
+    "#  'pos_y': '37.027515',\n",
+    "#  'pos_z': '7.4369965',\n",
+    "#  'orien_x': '-0.0',\n",
+    "#  'orien_y': '0.0',\n",
+    "#  'orien_z': '0.9999752',\n",
+    "#  'orien_w': '0.0070461035',\n",
+    "#  'linear_acc_x': '',\n",
+    "#  'linear_acc_y': '',\n",
+    "#  'linear_acc_z': '',\n",
+    "#  'linear_vel_x': '',\n",
+    "#  'linear_vel_y': '',\n",
+    "#  'linear_vel_z': '',\n",
+    "#  'angular_acc_x': '',\n",
+    "#  'angular_acc_y': '',\n",
+    "#  'angular_acc_z': '',\n",
+    "#  'angular_vel_x': '',\n",
+    "#  'angular_vel_y': '',\n",
+    "#  'angular_vel_z': '',\n",
+    "#  'pkts_buffered': 0.0,\n",
+    "#  'bit_rate': 4949598.859792932,\n",
+    "#  'chosen_ue': 'simulation_pedestrian1',\n",
+    "#  'packets': 14627.0,\n",
+    "#  'channel_mag': array(0.00890296)}"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -34,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "source": [
     "device = torch.device(\"cpu\")"
    ],
@@ -50,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "source": [
     "import caviar_tools\n",
     "from beamselect_env import BeamSelectionEnv"
@@ -67,10 +103,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "source": [
-    "epi = [0,10] #[start,end]\n",
-    "gym_env = BeamSelectionEnv(epi)\n",
+    "reward_type = 'train'    # 'test' or 'train'\n",
+    "epi = [0,1] #[start,end] \n",
+    "\n",
+    "\n",
+    "gym_env_test = BeamSelectionEnv(epi)\n",
+    "\n",
+    "gym_env_train = None\n",
+    "if (reward_type == 'train'):\n",
+    "    gym_env_train = BeamSelectionEnv(epi,reward_type)\n",
+    "else: \n",
+    "    gym_env_train = gym_env_test.copy()\n",
+    "    \n",
     "n_steps = caviar_tools.linecount(epi)"
    ],
    "outputs": [],
@@ -78,11 +124,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "source": [
     "n_steps"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "11365"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
    "metadata": {}
   },
   {
@@ -95,51 +152,6 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "gym_env.observation_space"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "state,reward,done,info=gym_env.step([2,53])"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "state"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "reward"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "info"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
    "cell_type": "markdown",
    "source": [
     "## Replay Memory"
@@ -148,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "source": [
     "Transition = namedtuple('Transition',\n",
     "                        ('state', 'action', 'next_state', 'reward'))\n",
@@ -181,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "source": [
     "class DQN(nn.Module):\n",
     "\n",
@@ -214,13 +226,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "source": [
     "tmp = DQN()\n",
     "sample = torch.rand((1,7))\n",
     "tmp(sample).shape"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 192])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
    "metadata": {}
   },
   {
@@ -232,14 +255,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "source": [
     "BATCH_SIZE = 128\n",
-    "GAMMA = 0.99\n",
+    "GAMMA = 0.0\n",
     "EPS_START = 0.9\n",
-    "EPS_END = 0.05\n",
-    "EPS_DECAY = 200\n",
-    "TARGET_UPDATE = 10"
+    "EPS_END = 0.3\n",
+    "EPS_DECAY = 0.1\n",
+    "TARGET_UPDATE = 1000"
    ],
    "outputs": [],
    "metadata": {}
@@ -253,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "source": [
     "policy_net = DQN(11, 192).to(device)\n",
     "target_net = DQN(11, 192).to(device)\n",
@@ -287,15 +310,6 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "select_action(torch.tensor(state.astype(np.float32).reshape(1, state.shape[0])))"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
    "cell_type": "markdown",
    "source": [
     "## Optimize Model"
@@ -304,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "source": [
     "def optimize_model():\n",
     "    if len(memory) < BATCH_SIZE:\n",
@@ -362,10 +376,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "source": [
     "# Tensorboard\n",
-    "log_dir = './log_tensorboard/11_obs_space' \n",
+    "log_dir = './log_tensorboard/11_obs_space_100_eps_best_hyper' \n",
     "writer = SummaryWriter(log_dir=log_dir)"
    ],
    "outputs": [],
@@ -373,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "source": [
     "# Initialize the environment and state\n",
     "state = torch.zeros((1,11), dtype=torch.float32)\n",
@@ -382,12 +396,17 @@
     "    # Select and perform an action\n",
     "    action = select_action(state)\n",
     "    # Observe new state\n",
-    "    next_state, reward, done, info = gym_env.step([action.item()//64, action.item()%64])\n",
+    "    next_state, reward, done, info = gym_env_train.step([action.item()//64, action.item()%64])\n",
+    "\n",
+    "    if (reward_type == 'train'):\n",
+    "        next_state, reward, done, info = gym_env_test.step([action.item()//64, action.item()%64])\n",
+    "        ovr_reward+=reward.item()\n",
+    "    else:\n",
+    "        ovr_reward+=reward.item()\n",
+    "\n",
     "    next_state = next_state.astype(np.float32).reshape(1, next_state.shape[0])\n",
     "    next_state = torch.tensor(next_state)\n",
     "    reward = torch.tensor([reward], device=device).float()\n",
-    "\n",
-    "    ovr_reward+=reward.item()\n",
     "\n",
     "    writer.add_scalar('episode_reward',reward,i_episode)\n",
     "\n",
@@ -424,8 +443,23 @@
     "\n",
     "print(f'Overall reward = {ovr_reward:.2f}. ' \\\n",
     "    f'Average Reward = {ovr_reward/n_steps:.4f}')\n",
-    "gym_env.close()"
+    "gym_env_train.close()"
    ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      " 45%|████▍     | 5080/11365 [00:27<00:37, 168.57it/s]"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
    "outputs": [],
    "metadata": {}
   }
@@ -433,23 +467,23 @@
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.6.13 64-bit ('ITU': conda)"
+   "display_name": "Python 3.6.9 64-bit ('torch_rl': venv)"
   },
   "language_info": {
+   "name": "python",
+   "version": "3.6.9",
+   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "nbconvert_exporter": "python",
+   "file_extension": ".py"
   },
   "orig_nbformat": 2,
   "interpreter": {
-   "hash": "704f8173b5278a07e1dad217082faca02c99b0dff81b24cc095b855fb1648990"
+   "hash": "f8337d322f02065436781250dc8881439cca8a58f1212dae4e4294dbbc4e4375"
   }
  },
  "nbformat": 4,
