Analysed more hyperparams and inferenced

--- a/RL.ipynb
+++ b/RL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "source": [
     "# {'pkts_dropped': 0.0,\n",
     "#  'pkts_transmitted': 75.0,\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -55,6 +55,7 @@
     "import matplotlib.pyplot as plt\n",
     "from collections import namedtuple, deque\n",
     "from itertools import count\n",
+    "import copy\n",
     "\n",
     "import gym\n",
     "\n",
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "source": [
     "device = torch.device(\"cpu\")"
    ],
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "source": [
     "import caviar_tools\n",
     "from beamselect_env import BeamSelectionEnv"
@@ -103,10 +104,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "source": [
-    "reward_type = 'train'    # 'test' or 'train'\n",
-    "epi = [0,1] #[start,end] \n",
+    "reward_type = 'test'    # 'test' or 'train'\n",
+    "epi = [0,10] #[start,end] \n",
     "\n",
     "\n",
     "gym_env_test = BeamSelectionEnv(epi)\n",
@@ -115,7 +116,7 @@
     "if (reward_type == 'train'):\n",
     "    gym_env_train = BeamSelectionEnv(epi,reward_type)\n",
     "else: \n",
-    "    gym_env_train = gym_env_test.copy()\n",
+    "    gym_env_train = copy.deepcopy(gym_env_test)\n",
     "    \n",
     "n_steps = caviar_tools.linecount(epi)"
    ],
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "source": [
     "n_steps"
    ],
@@ -133,11 +134,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "11365"
+       "68700"
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 6
     }
    ],
    "metadata": {}
@@ -160,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "source": [
     "Transition = namedtuple('Transition',\n",
     "                        ('state', 'action', 'next_state', 'reward'))\n",
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "source": [
     "class DQN(nn.Module):\n",
     "\n",
@@ -226,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "source": [
     "tmp = DQN()\n",
     "sample = torch.rand((1,7))\n",
@@ -241,7 +242,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 9
     }
    ],
    "metadata": {}
@@ -255,14 +256,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "source": [
     "BATCH_SIZE = 128\n",
-    "GAMMA = 0.0\n",
+    "GAMMA = 0.99\n",
     "EPS_START = 0.9\n",
-    "EPS_END = 0.3\n",
-    "EPS_DECAY = 0.1\n",
-    "TARGET_UPDATE = 1000"
+    "EPS_END = 0.05\n",
+    "\n",
+    "# It depends on overall number of steps, basic intitution is that\n",
+    "# once steps_done == EPS_DECAY then the probablity of choosing \n",
+    "# random action is 33%; considering EPS_END is zero\n",
+    "# As for ep = [0,10]; approx ep is 80k therefore exploration can be reduced to 33% around 50k\n",
+    "# Also because of this factor smoothed accuracy matters more for training then seeing the average\n",
+    "EPS_DECAY = 80000\n",
+    "\n",
+    "TARGET_UPDATE = 10"
    ],
    "outputs": [],
    "metadata": {}
@@ -276,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "source": [
     "policy_net = DQN(11, 192).to(device)\n",
     "target_net = DQN(11, 192).to(device)\n",
@@ -318,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "source": [
     "def optimize_model():\n",
     "    if len(memory) < BATCH_SIZE:\n",
@@ -376,10 +384,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "source": [
     "# Tensorboard\n",
-    "log_dir = './log_tensorboard/11_obs_space_100_eps_best_hyper' \n",
+    "log_dir = './mini_logs/eps_decay_8k' \n",
     "writer = SummaryWriter(log_dir=log_dir)"
    ],
    "outputs": [],
@@ -387,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "source": [
     "# Initialize the environment and state\n",
     "state = torch.zeros((1,11), dtype=torch.float32)\n",
@@ -450,28 +458,28 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      " 45%|████▍     | 5080/11365 [00:27<00:37, 168.57it/s]"
+      "100%|██████████| 68700/68700 [10:11<00:00, 112.29it/s]\n"
+     ]
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Overall reward = -10230.06. Average Reward = -0.1489\n"
      ]
     }
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.6.9 64-bit ('torch_rl': venv)"
+   "display_name": "Python 3.6.13 64-bit ('ITU': conda)"
   },
   "language_info": {
    "name": "python",
-   "version": "3.6.9",
+   "version": "3.6.13",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -483,7 +491,7 @@
   },
   "orig_nbformat": 2,
   "interpreter": {
-   "hash": "f8337d322f02065436781250dc8881439cca8a58f1212dae4e4294dbbc4e4375"
+   "hash": "704f8173b5278a07e1dad217082faca02c99b0dff81b24cc095b855fb1648990"
   }
  },
  "nbformat": 4,
